Agent Cards Added and Refactoring of Code